docs/tests/parser/types/invalid/TypeChannelMissingType.b
fn void test() {
    let chan<> ch;
}
